@@ -1,5 +1,8 @@
 2011-02-21  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* src/pj_init.c: fix serious bug in locale handling, wasn't copying
+	the old locale so it would sometimes get corrupted.
+
 	* src/proj_etmerc.c: added extended transverse mercator impl. (#97)
 
 	* Rerun autogen.sh with the latest versions of automake, autoconf and
